--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -4,7 +4,9 @@
 <head>
     <title>hello</title>
     <script>
-        alert("hello world");
+        function hello() {
+            alert("hello world");
+        }
     </script>
 </head>
 
