--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>hello</h1>
-    <button>click here</button>
+    <button onclick="hello">click here</button>
 </body>
 
 </html>
