--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>hello</title>
+    <title>Hello</title>
     <script>
         function hello() {
             alert("hello world");
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <h1>hello</h1>
-    <button onclick="hello">click here</button>
+    <h1>Hello</h1>
+    <button onclick="hello()">click here</button>
 </body>
 
 </html>
