added a new file

--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -5,7 +5,7 @@
     <title>Hello</title>
     <script>
         function hello() {
-            alert("hello world");
+            alert("helllo, wirld");
         }
     </script>
 </head>
