--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -5,7 +5,7 @@
     <title>Hello</title>
     <script>
         function hello() {
-            alert("helllo, wirld");
+            document.querySelector("h1").innerHTML = "good bye!";
         }
     </script>
 </head>
