use condition in hello

--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -5,7 +5,11 @@
     <title>Hello</title>
     <script>
         function hello() {
-            document.querySelector("h1").innerHTML = "good bye!";
+            if (document.querySelector("h1").innerHTML == Hello) {
+                document.querySelector("h1").innerHTML = "good bye!";
+            } else {
+                document.querySelector("h1").innerHTML = "Hello";
+            }
         }
     </script>
 </head>
