--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -5,7 +5,7 @@
     <title>Hello</title>
     <script>
         function hello() {
-            if (document.querySelector("h1").innerHTML == Hello) {
+            if (document.querySelector("h1").innerHTML == "Hello") {
                 document.querySelector("h1").innerHTML = "good bye!";
             } else {
                 document.querySelector("h1").innerHTML = "Hello";
