--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -5,10 +5,10 @@
     <title>Hello</title>
     <script>
         function hello() {
-            if (document.querySelector("h1").innerHTML == "Hello") {
-                document.querySelector("h1").innerHTML = "good bye!";
+            if (document.querySelector('h1').innerHTML == "Hello") {
+                document.querySelector('h1').innerHTML = "Goodbye!";
             } else {
-                document.querySelector("h1").innerHTML = "Hello";
+                document.querySelector('h1').innerHTML = "Hello";
             }
         }
     </script>
