re wite all progrme

--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -5,18 +5,18 @@
     <title>Hello</title>
     <script>
         function hello() {
-            if (document.querySelector('h1').innerHTML == "Hello") {
+            if (document.querySelector('h1').innerHTML == "Hello!") {
                 document.querySelector('h1').innerHTML = "Goodbye!";
             } else {
-                document.querySelector('h1').innerHTML = "Hello";
+                document.querySelector('h1').innerHTML = "Hello!";
             }
         }
     </script>
 </head>
 
 <body>
-    <h1>Hello</h1>
-    <button onclick="hello()">click here</button>
+    <h1>Hello!</h1>
+    <button onclick="hello()">click me</button>
 </body>
 
 </html>
