--- a/conter.html
+++ b/conter.html
@@ -5,17 +5,15 @@
     <title>counter</title>
 
     <script>
-        let counter = 0;
-
         function count() {
             counter++;
-            alert(counter);
+            document.querySelector('h1').innerHTML = counter;
         }
     </script>
 </head>
 
 <body>
-    <h1></h1>
+    <h1>0</h1>
     <button onclick="count()">count</button>
 </body>
 
