--- a/conter.html
+++ b/conter.html
@@ -5,6 +5,8 @@
     <title>counter</title>
 
     <script>
+        let counter = 0;
+
         function count() {
             counter++;
             document.querySelector('h1').innerHTML = counter;
