--- a/conter.html
+++ b/conter.html
@@ -11,6 +11,10 @@
             counter++;
             document.querySelector('h1').innerHTML = counter;
         }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            document.querySelector('button').onclick = count;
+        });
     </script>
 </head>
 
@@ -19,4 +23,4 @@
     <button onclick="count()">count</button>
 </body>
 
-</html>
+</html>:
