--- a/conter.html
+++ b/conter.html
@@ -9,7 +9,7 @@
         function count() {
             document.querySelector('h1').innerHTML = counter;
         }
-        addEventListener('DOMContnetLoaded', function() {
+        document.addEventListener('DOMContnetLoaded', function() {
             document.querySelector('button').onclick = count;
         });
     </script>
