--- a/conter.html
+++ b/conter.html
@@ -7,6 +7,7 @@
         let counter = 0;
 
         function count() {
+            counter++;
             document.querySelector('h1').innerHTML = counter;
         }
         document.addEventListener('DOMContnetLoaded', function() {
