--- a/conter.html
+++ b/conter.html
@@ -10,7 +10,7 @@
             counter++;
             document.querySelector('h1').innerHTML = counter;
         }
-        document.addEventListener('DOMContnetLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function() {
             document.querySelector('button').onclick = count;
         });
     </script>
