--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -17,7 +17,8 @@
 
 <body>
     <h1>Hello!</h1>
-    <button onclick="hello()">click me</button>
+    <input autofocus id="name" placeholder="enter youe name" type="text">
+    <input type="submit">
 </body>
 
 </html>
