--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Hello</title>
+    <link rel="stylesheet" href="style.css">
     <script>
         function hello() {
             const heading = document.querySelector('h1');
