--- a/prectice-javascript/index.html
+++ b/prectice-javascript/index.html
@@ -5,21 +5,21 @@
     <title>Hello</title>
     <link rel="stylesheet" href="style.css">
     <script>
-        function hello() {
-            const heading = document.querySelector('h1');
-            if (heading.innerHTML == "Hello!") {
-                heading.innerHTML = "Goodbye!";
-            } else {
-                heading.innerHTML = "Hello!";
-            }
-        }
+        document.addEventListener('DOMContentLoaded', function() {
+            document.querySelector("form").onsubmit = function() {
+                const name = document.querySelector("#name").value;
+                alert(`hello, ${name}`);
+            };
+        });
     </script>
 </head>
 
 <body>
     <h1>Hello!</h1>
-    <input autofocus id="name" placeholder="enter youe name" type="text">
-    <input type="submit">
+    <form>
+        <input autofocus id="name" placeholder="enter youe name" type="text">
+        <input type="submit">
+    </form>
 </body>
 
 </html>
