--- a/prectice-javascript/colour.html
+++ b/prectice-javascript/colour.html
@@ -7,24 +7,22 @@
     </title>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            document.querySelector("#brown").onclick = function() {
-                document.querySelector("#change").style.color = "brown";
-            }
-            document.querySelector("#pink").onclick = function() {
-                document.querySelector("#change").style.color = "pink";
-            }
-            document.querySelector("#grey").onclick = function() {
-                document.querySelector("#change").style.color = "grey";
-            }
+
+            document.querySelectorAll('button').forEach(function(button) {
+                button.onclick = function() {
+                    document.querySelector('#change').style.color = button.dataset.color;
+                }
+            });
+
         });
     </script>
 </head>
 
 <body>
-    <h1 id="change">i can change my color</h1>
-    <button id="brown">brown</button>
-    <button id="pink">pink</button>
-    <button id="grey">grey</button>
+    <h1 daa-color="change">i can change my color</h1>
+    <button data-color="brown">brown</button>
+    <button data-color="pink">pink</button>
+    <button data-color="grey">grey</button>
 </body>
 
 </html>
