--- a/prectice-javascript/tasks.html
+++ b/prectice-javascript/tasks.html
@@ -6,7 +6,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             document.querySelector("form").onsubmit = () => {
-                const tasks = document.querySelector("#TASKS").value;
+                const tasks = document.querySelector("#Tasks").value;
                 const li = document.createElement("li");
                 li.innerHTML = task;
                 document.querySelector("tasks").append(li);
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1>TASKS</h1>
+    <h1>Tasks</h1>
     <ul id="tasks">
 
     </ul>
