--- a/prectice-javascript/tasks.html
+++ b/prectice-javascript/tasks.html
@@ -9,7 +9,7 @@
                 const task = document.querySelector("#Task").value;
                 const li = document.createElement("li");
                 li.innerHTML = task;
-                document.querySelector("tasks").append(li);
+                document.querySelector("#tasks").append(li);
                 document.querySelector("#task").value = "";
                 return false;
             }
