--- a/prectice-javascript/tasks.html
+++ b/prectice-javascript/tasks.html
@@ -8,7 +8,7 @@
             document.querySelector("#submit").disabled = true;
 
             document.querySelector("#task").onkeyup = () => {
-                if (document.querySelector("#task").value.lemgth > 0) {
+                if (document.querySelector("#task").value.length > 0) {
                     document.querySelector("#submit").disabled = false;
                 } else {
                     document.querySelector("#submit").disabled = true;
