--- a/prectice-javascript/tasks.html
+++ b/prectice-javascript/tasks.html
@@ -16,16 +16,16 @@
             }
 
             document.querySelector("form").onsubmit = () => {
-                const task = document.querySelector("task").value;
+                const task = document.querySelector("#task").value;
 
                 const li = document.createElement("li");
                 li.innerHTML = task;
 
                 document.querySelector("#tasks").append(li);
 
-                document.querySelector("task").value = '';
+                document.querySelector("#task").value = '';
                 document.querySelector("#submit").disabled = true;
-                return fasle;
+                return false;
             }
         });
     </script>
