--- a/prectice-javascript/tasks.html
+++ b/prectice-javascript/tasks.html
@@ -32,7 +32,8 @@
 </head>
 
 <body>
-    <h1>tasks</h1>
+    <h1>hello welcome to my website</h1>
+    <h3>here you can save your tasks for youe future </h3>
     <ul id="tasks">
     </ul>
     <form>
