--- a/prectice-javascript/tasks.html
+++ b/prectice-javascript/tasks.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="styles.css">
     <title>tasks</title>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
