--- a/prectice-javascript/tasks.html
+++ b/prectice-javascript/tasks.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <h1>hello welcome to my website</h1>
+    <h1>HELLO , WELCOME TO THE WEBSITE.</h1>
     <h3>here you can save your tasks for youe future </h3>
     <ul id="tasks">
     </ul>
