--- a/prectice-javascript/calculator.html
+++ b/prectice-javascript/calculator.html
@@ -3,6 +3,27 @@
 
 <head>
     <title>Calculator</title>
+    <script>
+        const display = document.getElementById("display");
+        const buttons = document.querySelectorAll("button");
+
+        buttons.forEach(button => {
+            button.addEventListener("click", () => {
+                if (button.id === "equals") {
+                    display.value = eval(display.value);
+                } else {
+                    const value = button.getAttribute("data-value");
+                    const operator = button.getAttribute("data-operator");
+
+                    if (value) {
+                        display.value += value;
+                    } else if (operator) {
+                        display.value += operator;
+                    }
+                }
+            });
+        });
+    </script>
 </head>
 
 <body>
