--- a/prectice-javascript/calculator.html
+++ b/prectice-javascript/calculator.html
@@ -10,15 +10,19 @@
         buttons.forEach(button => {
             button.addEventListener("click", () => {
                 if (button.id === "equals") {
-                    display.value = eval(display.value);
+                    try {
+                        display.value = eval(display.value);
+                    } catch {
+                        display.value = "Error"; // handle invalid expression
+                    }
                 } else {
                     const value = button.getAttribute("data-value");
                     const operator = button.getAttribute("data-operator");
 
                     if (value) {
-                        display.value += value;
+                        display.value += value; // append number
                     } else if (operator) {
-                        display.value += operator;
+                        display.value += operator; // append operator
                     }
                 }
             });
