--- a/prectice-javascript/calculator.html
+++ b/prectice-javascript/calculator.html
@@ -36,25 +36,20 @@
         const buttons = document.querySelectorAll("button");
 
         buttons.forEach(button => {
-            button.addEventListener("click", () => {
-                if (button.id === "equals") {
-                    try {
-                        display.value = eval(display.value);
-                    } catch {
-                        display.value = "Error";
-                    }
-                } else {
-                    const value = button.getAttribute("data-value");
-                    const operator = button.getAttribute("data-operator");
+                    button.addEventListener("click", () => {
+                            if (button.id === "equals") {
+                                display.value = eval(display.value); {
+                                    const value = button.getAttribute("data-value");
+                                    const operator = button.getAttribute("data-operator");
 
-                    if (value) {
-                        display.value += value;
-                    } else if (operator) {
-                        display.value += operator;
-                    }
-                }
-            });
-        });
+                                    if (value) {
+                                        display.value += value;
+                                    } else if (operator) {
+                                        display.value += operator;
+                                    }
+                                }
+                            });
+                    });
     </script>
 </body>
 
