--- a/prectice-javascript/calculator.html
+++ b/prectice-javascript/calculator.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="calculator">
-        <input type="text" id="display" readonly>
+        <input type="text" id="display">
 
         <div class="buttons">
             <button data-value="7">7</button>
