--- a/prectice-javascript/colour.html
+++ b/prectice-javascript/colour.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1 id="change">i can change my color</h1>
+    <h1 id="change">i love mishal</h1>
     <button data-color="brown">brown</button>
     <button data-color="pink">pink</button>
     <button data-color="grey">grey</button>
