--- a/prectice-javascript/colour.html
+++ b/prectice-javascript/colour.html
@@ -3,11 +3,12 @@
 
 <head>
     <title>gpt</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <buton>home</buton>
+
 </body>
 
 </html>
